fix home featured photos container so the image won't be cropped

--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ body {
   gap: 20px;
   margin-bottom: 80px;
   overflow: hidden;
+  padding: 10px;
 }
 
 .home-featured-photos img {
